# internal/app/model/ent.go
@@ -12,22 +12,3 @@ type Ent struct {
 	AssignedProviders string
 	Edition           uint8 `gorm:"default:1"`
 }
-
-// 创建企业，请求参数
-
-// 企业列表加载 dto
-
-type UpdateEntReq struct {
-	EntName      string `form:"ent_name"`
-	EntDesc      string `form:"ent_desc"`
-	ContactName  string `form:"contact_name"`
-	ContactEmail string `form:"contact_email"`
-	ContactPhone string `form:"contact_phone"`
-}
-
-// func (req AddEntReq) ToEnt() Ent {
-// 	return Ent{
-// 		Name: req.EntName,
-// 		Desc: req.EntDesc,
-// 	}
-// }
